this: my new commit

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,44 @@
-
+/*
+font-family: 'Gemunu Libre', sans-serif;
+*/
 body {
-    background: url(../images/atmosfera-neboskreb-1920x1080.jpg);
+    background: #01012b;
     text-align: center;
+    width: 100%;
+    font-family: 'Gemunu Libre', sans-serif;
+    font-weight: 18px;
+    padding-top: 50px;
+
+}
+.super {
+    border-radius: 15px;
+    width: 46%;
+    margin: 0 auto;
+    border: 3px #ff2a6d solid;
+    display: flex;
+    flex-direction: column;
+    height: 750px;
+}
+
+.btn{
+    height: 40px;
+    width: 46%;
+    border-radius: 15px;
+    background: #ff2a6d;
+    color: #05d9e8;
+}
+
+.input{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.myText{
+
+}
+.delButton{
+    height: 40px;
+    width: 100%;
+    border-radius: 15px;
+    background: #ff2a6d;
+    color: #05d9e8;
 }
